--- a/db/micro.lpc.html
+++ b/db/micro.lpc.html
@@ -16,15 +16,15 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR valign="middle">
-<TD ALIGN="LEFT">memory_obj</TD>
-<TD ALIGN="LEFT">102</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">48</TD>
-<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">alu_obj</TD>
+<TD ALIGN="LEFT">108</TD>
 <TD ALIGN="LEFT">32</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">108</TD>
+<TD ALIGN="LEFT">32</TD>
+<TD ALIGN="LEFT">32</TD>
+<TD ALIGN="LEFT">32</TD>
+<TD ALIGN="LEFT">32</TD>
+<TD ALIGN="LEFT">32</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">0</TD>
@@ -33,43 +33,27 @@
 </TR>
 <TR valign="middle">
 <TD ALIGN="LEFT">register_file_obj</TD>
-<TD ALIGN="LEFT">44</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">64</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-</TR>
-<TR valign="middle">
-<TD ALIGN="LEFT">ir_obj</TD>
-<TD ALIGN="LEFT">38</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">5</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">32</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-</TR>
-<TR valign="middle">
-<TD ALIGN="LEFT">pc_obj</TD>
-<TD ALIGN="LEFT">39</TD>
+<TD ALIGN="LEFT">49</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">3</TD>
 <TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">64</TD>
+<TD ALIGN="LEFT">65</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+</TR>
+<TR valign="middle">
+<TD ALIGN="LEFT">phase_gen_obj</TD>
+<TD ALIGN="LEFT">3</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">5</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">0</TD>
