--- a/db/micro.lpc.html
+++ b/db/micro.lpc.html
@@ -16,6 +16,54 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR valign="middle">
+<TD ALIGN="LEFT">memory_obj|embedded_ram_obj|altsyncram_component|auto_generated</TD>
+<TD ALIGN="LEFT">50</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">32</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+</TR>
+<TR valign="middle">
+<TD ALIGN="LEFT">memory_obj|embedded_ram_obj</TD>
+<TD ALIGN="LEFT">50</TD>
+<TD ALIGN="LEFT">31</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">31</TD>
+<TD ALIGN="LEFT">32</TD>
+<TD ALIGN="LEFT">31</TD>
+<TD ALIGN="LEFT">31</TD>
+<TD ALIGN="LEFT">31</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+</TR>
+<TR valign="middle">
+<TD ALIGN="LEFT">memory_obj</TD>
+<TD ALIGN="LEFT">53</TD>
+<TD ALIGN="LEFT">39</TD>
+<TD ALIGN="LEFT">44</TD>
+<TD ALIGN="LEFT">39</TD>
+<TD ALIGN="LEFT">64</TD>
+<TD ALIGN="LEFT">39</TD>
+<TD ALIGN="LEFT">39</TD>
+<TD ALIGN="LEFT">39</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+</TR>
+<TR valign="middle">
 <TD ALIGN="LEFT">alu_obj</TD>
 <TD ALIGN="LEFT">108</TD>
 <TD ALIGN="LEFT">32</TD>
