--- a/db/micro.lpc.html
+++ b/db/micro.lpc.html
@@ -16,6 +16,54 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR valign="middle">
+<TD ALIGN="LEFT">alu_obj</TD>
+<TD ALIGN="LEFT">108</TD>
+<TD ALIGN="LEFT">1</TD>
+<TD ALIGN="LEFT">29</TD>
+<TD ALIGN="LEFT">1</TD>
+<TD ALIGN="LEFT">37</TD>
+<TD ALIGN="LEFT">1</TD>
+<TD ALIGN="LEFT">1</TD>
+<TD ALIGN="LEFT">1</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+</TR>
+<TR valign="middle">
+<TD ALIGN="LEFT">register_file_obj|ir_dec_obj</TD>
+<TD ALIGN="LEFT">38</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">22</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">6</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+</TR>
+<TR valign="middle">
+<TD ALIGN="LEFT">register_file_obj</TD>
+<TD ALIGN="LEFT">49</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">65</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+<TD ALIGN="LEFT">0</TD>
+</TR>
+<TR valign="middle">
 <TD ALIGN="LEFT">memory_obj|embedded_ram_obj|altsyncram_component|auto_generated</TD>
 <TD ALIGN="LEFT">50</TD>
 <TD ALIGN="LEFT">0</TD>
@@ -50,13 +98,13 @@
 <TR valign="middle">
 <TD ALIGN="LEFT">memory_obj</TD>
 <TD ALIGN="LEFT">53</TD>
-<TD ALIGN="LEFT">39</TD>
-<TD ALIGN="LEFT">44</TD>
-<TD ALIGN="LEFT">39</TD>
+<TD ALIGN="LEFT">7</TD>
+<TD ALIGN="LEFT">4</TD>
+<TD ALIGN="LEFT">7</TD>
 <TD ALIGN="LEFT">64</TD>
-<TD ALIGN="LEFT">39</TD>
-<TD ALIGN="LEFT">39</TD>
-<TD ALIGN="LEFT">39</TD>
+<TD ALIGN="LEFT">7</TD>
+<TD ALIGN="LEFT">7</TD>
+<TD ALIGN="LEFT">7</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">0</TD>
@@ -64,28 +112,12 @@
 <TD ALIGN="LEFT">0</TD>
 </TR>
 <TR valign="middle">
-<TD ALIGN="LEFT">alu_obj</TD>
-<TD ALIGN="LEFT">108</TD>
-<TD ALIGN="LEFT">32</TD>
-<TD ALIGN="LEFT">108</TD>
-<TD ALIGN="LEFT">32</TD>
-<TD ALIGN="LEFT">32</TD>
-<TD ALIGN="LEFT">32</TD>
-<TD ALIGN="LEFT">32</TD>
-<TD ALIGN="LEFT">32</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">0</TD>
-</TR>
-<TR valign="middle">
-<TD ALIGN="LEFT">register_file_obj</TD>
-<TD ALIGN="LEFT">49</TD>
+<TD ALIGN="LEFT">pc_obj</TD>
+<TD ALIGN="LEFT">39</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">3</TD>
 <TD ALIGN="LEFT">0</TD>
-<TD ALIGN="LEFT">65</TD>
+<TD ALIGN="LEFT">40</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">0</TD>
 <TD ALIGN="LEFT">0</TD>
